--- a/practice_abstract_algebra.ipynb
+++ b/practice_abstract_algebra.ipynb
@@ -19,7 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sage import *"
+    "from sage import *\n",
+    "from sage.all import *\n",
+    "from sage.groups.matrix_gps.finitely_generated import *\n",
+    "from IPython.display import Markdown, display"
    ]
   },
   {
@@ -133,7 +136,7 @@
      "text": [
       "True\n",
       "3^2 * 547\n",
-      "199\n",
+      "619\n",
       "[101, 103, 107, 109]\n",
       "2^3\n",
       "5^3\n",
@@ -167,9 +170,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 50997157, b = 96851101\n",
+      "a = 61291907, b = 44594521\n",
       "gcd(a, b) = 1\n",
-      "gcd(a, b) = 1 = 13295921 * 50997157 + -7000996 * 96851101\n"
+      "gcd(a, b) = 1 = -20272160 * 61291907 + 27862601 * 44594521\n"
      ]
     }
    ],
@@ -617,9 +620,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "801d39ba",
+   "metadata": {},
+   "source": [
+    "## Chapter 4: Cyclic Groups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3831adc0",
+   "metadata": {},
+   "source": [
+    "### Matrix Groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "af28f39b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Actually its $GL_2(\\mathbb{Q})$, but I can't figure out the way to deal with subgroups of $GL_2(\\R)$. It just doesn't works."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(\n",
+       "[1 0]  [-1  0]  [ 0 -1]  [ 0  1]\n",
+       "[0 1], [ 0 -1], [ 1  0], [-1  0]\n",
+       ")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Markdown(\"Actually its $GL_2(\\mathbb{Q})$, but I can't figure out the way to deal with subgroups of $GL_2(\\R)$. It just doesn't works.\"))\n",
+    "\n",
+    "# Exercise 4.5.4\n",
+    "display(MatrixGroup(Matrix(QQ, 2, [0, 1, -1, 0])).list())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af28f39b",
+   "id": "5dfcb08f",
    "metadata": {},
    "outputs": [],
    "source": []
