Re-run all cell.

--- a/practice_abstract_algebra.ipynb
+++ b/practice_abstract_algebra.ipynb
@@ -136,7 +136,7 @@
      "text": [
       "True\n",
       "3^2 * 547\n",
-      "433\n",
+      "643\n",
       "[101, 103, 107, 109]\n",
       "2^3\n",
       "5^3\n",
@@ -170,9 +170,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 98344387, b = 19469077\n",
+      "a = 96412189, b = 12962759\n",
       "gcd(a, b) = 1\n",
-      "gcd(a, b) = 1 = -5152630 * 98344387 + 26027543 * 19469077\n"
+      "gcd(a, b) = 1 = 360198 * 96412189 + -2679019 * 12962759\n"
      ]
     }
    ],
@@ -974,6 +974,14 @@
     "print(Z35_units := Z35.list_of_elements_of_multiplicative_group())\n",
     "print({a: len({a^i for i in range(len(Z35_units))}) for a in Z35_units})\n",
     "print(Z35.unit_group())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41266d9e",
+   "metadata": {},
+   "source": [
+    "# Chapter 5: Permutation Groups"
    ]
   },
   {
