--- a/math430.ipynb
+++ b/math430.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "[2, 3, 5, 7]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,12 +54,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fermat_little_theorem_test(n):\n",
+    "    num_list = []\n",
+    "    Zn = Integers(n)\n",
+    "    for i in range(2,n):\n",
+    "        if pow(Zn(i), n-1) != 1:\n",
+    "            num_list.append(i)\n",
+    "    return num_list\n",
+    "\n",
+    "fermat_little_theorem_test(11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +103,7 @@
        "10"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,10 +118,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gap(gap(5).SmallGroup(1)).StructureDescription()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3} {1, 2, 3, 4, 6, 12}\n",
+      "C3 : C4\n",
+      "{2, 3} {1, 2, 3, 4, 6, 12}\n",
+      "C12\n",
+      "{2, 3} {1, 2, 3, 4, 12}\n",
+      "A4\n",
+      "{2, 3} {1, 2, 3, 4, 6, 12}\n",
+      "D12\n",
+      "{2, 3} {1, 2, 3, 4, 6, 12}\n",
+      "C6 x C2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def lagrange_converse(n):\n",
+    "    h = gap(n).AllSmallGroups() # Get all groups of order n.\n",
+    "    for i in h:\n",
+    "        sd = gap(i).StructureDescription()\n",
+    "        g = PermutationGroup(gap_group=gap.Image(gap.IsomorphismPermGroup(i)))\n",
+    "        n_factors = set([x[0] for x in factor(n)])\n",
+    "        subgroup_orders = set([x.order() for x in g.subgroups()])\n",
+    "        print(n_factors, subgroup_orders)\n",
+    "        if n_factors & subgroup_orders:\n",
+    "            print(sd)\n",
+    "\n",
+    "lagrange_converse(12)"
+   ]
   }
  ],
  "metadata": {
